# ttask

./: .README.md.un~  .gitignore  LICENSE  README.md  README.md~  main.py  pyproject.toml  todo.txt  todotxtio.py
tests/: test_ttask.py
ttask/: main.py  todotxtio.py
